# groundhog

./: .env.template  .flaskenv  .gitignore  .pre-commit-config.yaml  README.md  config.py  groundhog.py  pyproject.toml  requirements.txt  wsgi.py
.github/: codecov.yml
.github/workflows/: codecov.yml  dev_build.yml  dev_pipeline.yml  prod_pipeline.yml
groundhog/: __init__.py  auth.py  chances.py  helpers.py  models.py  routes.py
groundhog/static/: package-lock.json  styles.css
groundhog/static/sass/: main.scss
groundhog/templates/: about.html  base.html  history.html  index.html  map.html  sighting.html  tracking.html  zoo.html
groundhog/templates/auth/: login.html  register.html
groundhog/tests/: conftest.py
groundhog/tests/functional/: test_auth.py  test_routes.py
groundhog/tests/unit/: test_helpers.py  test_models.py
migrations/versions/: 7bded807115f_initial.py  fbbb990bb707_.py  fed7b412c063_initial_migrate.py
tests/: conftest.py  test_sightings
tests/functional/: test_auth.py  test_routes.py
tests/integration/: test_config.py  test_db.py
tests/unit/: test_chances.py  test_config.py  test_helpers.py  test_models.py  test_templates.py
