[tool.poetry]
name = "groundhog"
version = "0.1.0"
description = ""
authors = ["Joseph Bettenhausen <21023218+jbettenh@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
flask = "^2.3.2"
flask-migrate = "^4.0.0"
flask-session = "^0.4.0"
flask-sqlalchemy = "^3.0.2"
folium = "^0.13.0"
psycopg2 = "^2.9.5"
python = "^3.9"
python-dotenv = "^0.21.0"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^6.0.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.black]
line-length = 79
exclude = '''
(
  /(
    | \.git          # root of the project
    | \.github          # root of the project
    | \.venv
    | \.vscode
    | flask_session
    | migrations
  )/
)
'''
force-exclude = '''
(
  /(
    | \.git          # root of the project
    | \.github          # root of the project
    | \.venv
    | \.vscode
    | flask_session
    | migrations
  )/
)
'''
